tree-sitter-rgbasm/test/corpus/rgbds.txt
================================================================================
Test Name: RGBDS import: standalone ALIGN directive
================================================================================

align 4, 2

---

(source_file
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (number_literal))
        (expression
          (number_literal))))))

================================================================================
Test Name: RGBDS import: PRINTLN current address symbol
================================================================================

println @

---

(source_file
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (constant))))))

================================================================================
Test Name: RGBDS import: DS ALIGN helper call
================================================================================

ds align [8, $C2]

---

(source_file
  (directive
    (ds_directive
      keyword: (directive_keyword)
      (align_option
        align: (expression
          (number_literal))
        offset: (expression
          (number_literal))))))

================================================================================
Test Name: RGBDS import: SECTION UNION with ALIGN option
================================================================================

SECTION UNION "X", WRAM0, ALIGN[16]

---

(source_file
  (section_block
    (section_directive
      keyword: (directive_keyword)
      union: (directive_keyword)
      (string_literal)
      (section_type)
      (section_options
        (section_option
          (align_option
            align: (expression
              (number_literal))))))))

================================================================================
Test Name: RGBDS import: macro call with free-form args
================================================================================

print_all This test, probably, passes\,, but who knows, ?

---

(source_file
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (expression
          (symbol))
        (expression
          (symbol)))
      (argument_list
        (expression
          (symbol))
        (expression
          (symbol))
        (macro_arg_raw)
        (expression
          (symbol))
        (expression
          (symbol))
        (expression
          (symbol))
        (macro_arg_raw)))))

================================================================================
Test Name: RGBDS import: anonymous label in EXPORT/PURGE
================================================================================

SECTION "Example", ROM0
EXPORT :-
PURGE :-

---

(source_file
  (section_block
    (section_directive
      keyword: (directive_keyword)
      (string_literal)
      (section_type))
    (directive
      (export_directive
        keyword: (directive_keyword)
        (argument_list
          (expression
            (anonymous_label_ref)))))
    (directive
      (simple_directive
        keyword: (directive_keyword)
        (argument_list
          (expression
            (anonymous_label_ref)))))))

================================================================================
Test Name: RGBDS import: character literals in CHARMAP/CHAR
================================================================================

charmap 'c{s}e', 3
char 'c{s}e', 3

---

(source_file
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (char_literal))
        (expression
          (number_literal)))))
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (expression
          (char_literal)))
      (argument_list
        (macro_arg_raw)))))

================================================================================
Test Name: RGBDS import: CHARMAP with macro argument key
================================================================================

MACRO test
    charmap \1, 42
ENDM
test "デ"

---

(source_file
  (directive
    (macro_definition
      keyword: (directive_keyword)
      (expression
        (symbol))
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (expression
              (macro_argument))
            (expression
              (number_literal)))))
      end: (directive_keyword)))
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (expression
          (string_literal))))))

================================================================================
Test Name: RGBDS import: DEF inside scoped label
================================================================================

label:
  DEF scoped = 1
  db scoped

---

(source_file
  (global_label_block
    name: (label)
    (directive
      (def_directive
        keyword: (directive_keyword)
        name: (symbol)
        value: (expression
          (number_literal))))
    (directive
      (simple_directive
        keyword: (directive_keyword)
        (argument_list
          (expression
            (symbol)))))))

================================================================================
Test Name: RGBDS import: deprecated functions
================================================================================

; These functions are deprecated but still supported,
println CHARSUB("a", 123), STRIN(A, 2), STRRIN("foo", 2), STRSUB("bar", "baz")

---

(source_file
  (inline_comment)
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (function_call
            (function_name)
            (expression
              (string_literal))
            (expression
              (number_literal))))
        (expression
          (function_call
            (function_name)
            (expression
              (register))
            (expression
              (number_literal))))
        (expression
          (function_call
            (function_name)
            (expression
              (string_literal))
            (expression
              (number_literal))))
        (expression
          (function_call
            (function_name)
            (expression
              (string_literal))
            (expression
              (string_literal))))))))

================================================================================
Test Name: RGBDS import: destination A optional
================================================================================

MACRO both
  REDEF op EQUS "\1"
  SHIFT
  {op} \#
  {op} a, \#
ENDM
both cpl

---

(source_file
  (macro_definition
    keyword: (directive_keyword)
    name: (identifier)
    (directive
      (redef_directive
        keyword: (directive_keyword)
        name: (identifier)
        assign_type: (directive_keyword)
        value: (string_literal)))
    (directive
      (shift_directive
        keyword: (directive_keyword)))
    (instruction_line
      (instruction_list
        (instruction
          opcode: (interpolatable_identifier
            (interpolation
              symbol: (identifier)))
          (operand_list
            (operand
              (primary_expression
                (macro_arguments_spread)))))))
    (instruction_line
      (instruction_list
        (instruction
          opcode: (interpolatable_identifier
            (interpolation
              symbol: (identifier)))
          (operand_list
            (operand
              (primary_expression
                (register)))
            (operand
              (primary_expression
                (macro_arguments_spread)))))))
    end: (directive_keyword))
  (macro_invocation_line
    (macro_invocation
      name: (identifier)
      (macro_arg_list_expr
        argument: (primary_expression
          (identifier))))))

================================================================================
Test Name: RGBDS import: diagnostic parameter caps
================================================================================

OPT Wtruncation=256
db 999

---

(source_file
  (directive
    (opt_directive
      keyword: (directive_keyword)
      (opt_arg)))
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (number_literal))))))

================================================================================
Test Name: RGBDS import: disable warnings
================================================================================

MACRO test
    assert warn, 0
    warn "-Wuser is on by default"
ENDM

test
OPT -Weverything
test

---

(source_file
  (directive
    (macro_definition
      keyword: (directive_keyword)
      (expression
        (symbol))
      (directive
        (assert_directive
          keyword: (directive_keyword)
          (severity)
          condition: (expression
            (number_literal))))
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (expression
              (string_literal)))))
      end: (directive_keyword)))
  (directive
    (macro_invocation
      (symbol)))
  (directive
    (opt_directive
      keyword: (directive_keyword)
      (opt_arg)))
  (directive
    (macro_invocation
      (symbol))))

================================================================================
Test Name: RGBDS import: div/mod macro arithmetic
================================================================================

MACRO test_mod
  def x = \1
  def y = \2
ENDM
test_mod 3, 2

---

(source_file
  (directive
    (macro_definition
      keyword: (directive_keyword)
      (expression
        (symbol))
      (directive
        (def_directive
          keyword: (directive_keyword)
          name: (symbol)
          value: (expression
            (macro_argument))))
      (directive
        (def_directive
          keyword: (directive_keyword)
          name: (symbol)
          value: (expression
            (macro_argument))))
      end: (directive_keyword)))
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (macro_arg_raw))
      (argument_list
        (macro_arg_raw)))))

================================================================================
Test Name: RGBDS import: ds align inline forms
================================================================================

SECTION "aligned", ROM0, ALIGN[8]
ds align[8, $ff], 6

---

(source_file
  (section_block
    (section_directive
      keyword: (directive_keyword)
      (string_literal)
      (section_type)
      (section_options
        (section_option
          (align_option
            align: (expression
              (number_literal))))))
    (directive
      (ds_directive
        keyword: (directive_keyword)
        (align_option
          align: (expression
            (number_literal))
          offset: (expression
            (number_literal)))
        size: (expression
          (number_literal))))))

================================================================================
Test Name: RGBDS import: ASSERT with lowercase severity
================================================================================

assert fatal, 2 + 2 == 5, "there are four lights"

---

(source_file
  (directive
    (assert_directive
      keyword: (directive_keyword)
      (severity)
      condition: (expression
        (binary_expression
          left: (expression
            (binary_expression
              left: (expression
                (number_literal))
              right: (expression
                (number_literal))))
          right: (expression
            (number_literal))))
      message: (string_literal))))

================================================================================
Test Name: RGBDS import: PURGE with macro argument
================================================================================

MACRO test
PURGE \1
ENDM

---

(source_file
  (directive
    (macro_definition
      keyword: (directive_keyword)
      (expression
        (symbol))
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (expression
              (macro_argument)))))
      end: (directive_keyword))))

================================================================================
Test Name: RGBDS import: macro argument with escaped comma
================================================================================

foo passes\,

---

(source_file
  (directive
    (macro_invocation
      (symbol)
      (argument_list
        (expression
          (symbol))
        (macro_arg_raw)))))

================================================================================
Test Name: RGBDS import: SHIFT with macro argument expression
================================================================================

MACRO test
shift _NARG - 1
ENDM

---

(source_file
  (directive
    (macro_definition
      keyword: (directive_keyword)
      (expression
        (symbol))
      (directive
        (simple_directive
          keyword: (directive_keyword)
          (argument_list
            (expression
              (binary_expression
                left: (expression
                  (constant))
                right: (expression
                  (number_literal)))))))
      end: (directive_keyword))))

================================================================================
Test Name: RGBDS import: format specifiers in interpolation
================================================================================

DEF X = 42
PRINTLN "{X}"
PRINTLN "{x:X}"
PRINTLN "{d:X}"

---

(source_file
  (directive
    (def_directive
      keyword: (directive_keyword)
      name: (symbol)
      value: (expression
        (number_literal))))
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              name: (interpolation_content)))))))
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              format: (format_spec)
              name: (interpolation_content)))))))
  (directive
    (simple_directive
      keyword: (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              format: (format_spec)
              name: (interpolation_content))))))))
