tree-sitter-rgbasm/test/corpus/strings.txt
================================================================================
Strings: escapes, multiline, raw, ops
================================================================================

; Escape sequences
DEF STR_ESC EQUS "Line1\nLine2\tTabbed\\Backslash\"Quote\{Brace"

; Multi-line strings (triple quotes)
DEF STR_MULTI EQUS """First line
Second line"""

; Raw strings (no escape processing)
DEF STR_RAW EQUS #"\n\t\{ literally"

; String concatenation and comparison
ASSERT "foo" ++ "bar" === "foobar"
ASSERT "a" !== "b"

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (string_literal
        (escape)
        (escape)
        (escape)
        (escape)
        (escape))))
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (string_literal)))
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (raw_string_literal)))
  (inline_comment)
  (directive
    (assert_directive
      (directive_keyword)
      (binary_expression
        (binary_expression
          (string_literal)
          (string_literal))
        (string_literal))))
  (directive
    (assert_directive
      (directive_keyword)
      (binary_expression
        (string_literal)
        (string_literal)))))

================================================================================
Strings: double quotes in triple-quoted strings
================================================================================

DEF X EQUS """This string contains a ""double quote"" inside."""

---

(source_file
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (string_literal))))

================================================================================
Strings: raw strings
================================================================================

DEF RAW1 EQUS #"\n\t\" ; \ does not escape in raw strings
DEF RAW2 EQUS #""" ""
"""

---

(source_file
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (raw_string_literal)))
  (inline_comment)
  (directive
    (def_directive
      (def_keyword)
      (variable
        (identifier))
      (equs_keyword)
      (raw_string_literal))))
